# nox-2d-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
data/: boxes.ron  meshes.ron  scene_1.ron  scene_2.ron
shaders/: shader.vert
src/: app_state.rs  application.rs  camera.rs  command.rs  events.rs  hierarchy.rs  loader.rs  main.rs  mesh.rs  mesh_pipeline.rs  texture.rs  transform.rs  wgpu_state.rs
src/asset/: assets.rs  handle.rs  mod.rs
src/mesh/: mesh.rs  mod.rs  pipeline.rs  pipeline_params.rs
src/physics/: mod.rs
src/static_data/: collection.rs  mesh.rs  mod.rs  physics.rs  scene.rs
src/ui/: mod.rs  ui_state.rs
